--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
       <artifactId>json</artifactId>
       <version>20210307</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.tomakehurst</groupId>
+      <artifactId>wiremock-jre8</artifactId>
+      <scope>test</scope>
+      <version>2.28.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
