--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,23 @@ google-book-api/mp-rest/url= https://www.googleapis.com/books
 google-book-api/mp-rest/scope=javax.inject.Singleton
 
 
-quarkus.smallrye-openapi.path=/swagger
+# Configuration file
+# key = value
 
-quarkus.log.level=DEBUG
+quarkus.http.port=8080
+quarkus.http.ssl-port=8443
+quarkus.http.cors=true
+quarkus.swagger-ui.path=/swagger-ui
+quarkus.swagger-ui.enable=true
+quarkus.swagger-ui.always-include=true
+quarkus.native.additional-build-args=-J-Xmx4G, -H:ResourceConfigurationFiles=resources-config.json
+
+
+# logging configuration
+quarkus.log.level=INFO
+quarkus.log.console.enable=true
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.console.color=false
+%dev.quarkus.log.console.color=true
+%test.quarkus.log.console.color=false
+%test.quarkus.log.level=INFO
