add simple keycloak

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,17 @@
-
-google-book-api/mp-rest/url= https://www.googleapis.com/books
-google-book-api/mp-rest/scope=javax.inject.Singleton
-
-
 # Configuration file
 # key = value
 
-quarkus.http.port=8080
-quarkus.http.ssl-port=8443
+quarkus.http.port=8081
+#quarkus.http.ssl-port=8443
 quarkus.http.cors=true
 quarkus.swagger-ui.path=/swagger-ui
 quarkus.swagger-ui.enable=true
 quarkus.swagger-ui.always-include=true
 quarkus.native.additional-build-args=-J-Xmx4G, -H:ResourceConfigurationFiles=resources-config.json
 
+# rest client configuration
+google-book-api/mp-rest/url= https://www.googleapis.com/books
+google-book-api/mp-rest/scope=javax.inject.Singleton
 
 # logging configuration
 quarkus.log.level=INFO
@@ -23,3 +21,13 @@ quarkus.log.console.color=false
 %dev.quarkus.log.console.color=true
 %test.quarkus.log.console.color=false
 %test.quarkus.log.level=INFO
+
+
+# OIDC Configuration
+quarkus.oidc.auth-server-url=http://localhost:8080/auth/realms/quarkus
+quarkus.oidc.client-id=backend-service
+quarkus.oidc.credentials.secret=secret
+quarkus.oidc.tls.verification=none
+
+# Enable Policy Enforcement
+quarkus.keycloak.policy-enforcer.enable=true
