add keycloak support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 # Configuration file
 # key = value
-
-quarkus.http.port=8081
-#quarkus.http.ssl-port=8443
+quarkus.http.port=8080
+quarkus.http.ssl-port=8443
 quarkus.http.cors=true
 quarkus.swagger-ui.path=/swagger-ui
 quarkus.swagger-ui.enable=true
@@ -18,16 +17,14 @@ quarkus.log.level=INFO
 quarkus.log.console.enable=true
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.color=false
-%dev.quarkus.log.console.color=true
+%dev.quarkus.log.console.color=false
 %test.quarkus.log.console.color=false
 %test.quarkus.log.level=INFO
+quarkus.log.category."io.quarkus.oidc.client.runtime.OidcClientImpl".level=TRACE
+quarkus.log.category."io.quarkus.oidc.client.runtime.OidcClientImpl".min-level=TRACE
 
 
 # OIDC Configuration
-quarkus.oidc.auth-server-url=http://localhost:8080/auth/realms/quarkus
+quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/quarkus
 quarkus.oidc.client-id=backend-service
-quarkus.oidc.credentials.secret=secret
-quarkus.oidc.tls.verification=none
 
-# Enable Policy Enforcement
-quarkus.keycloak.policy-enforcer.enable=true
