build role access for books request handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 quarkus.http.port=8080
 quarkus.http.ssl-port=8443
 quarkus.http.cors=true
-quarkus.swagger-ui.path=/swagger-ui
+quarkus.swagger-ui.path=/q/swagger-ui
 quarkus.swagger-ui.enable=true
 quarkus.swagger-ui.always-include=true
 quarkus.native.additional-build-args=-J-Xmx4G, -H:ResourceConfigurationFiles=resources-config.json
@@ -27,4 +27,5 @@ quarkus.log.category."io.quarkus.oidc.client.runtime.OidcClientImpl".min-level=T
 # OIDC Configuration
 quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/quarkus
 quarkus.oidc.client-id=backend-service
+
 
