not using correct oidc client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,9 @@ quarkus.native.additional-build-args=-J-Xmx4G, -H:ResourceConfigurationFiles=res
 google-book-api/mp-rest/url= https://www.googleapis.com/books
 google-book-api/mp-rest/scope=javax.inject.Singleton
 
+
 # logging configuration
-quarkus.log.level=INFO
+quarkus.log.level=DEBUG
 quarkus.log.console.enable=true
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.color=false
@@ -23,9 +24,18 @@ quarkus.log.console.color=false
 quarkus.log.category."io.quarkus.oidc.client.runtime.OidcClientImpl".level=TRACE
 quarkus.log.category."io.quarkus.oidc.client.runtime.OidcClientImpl".min-level=TRACE
 
+quarkus.http.access-log.enabled=true
+quarkus.http.access-log.pattern=long
+
 
 # OIDC Configuration
 quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/quarkus
 quarkus.oidc.client-id=backend-service
 
+
+# OIDC Client
+oidc-client/mp-rest/url= http://localhost:8180/auth/realms/quarkus/
+quarkus.oidc-client.auth-server-url=http://localhost:8180/auth/realms/quarkus/
+quarkus.oidc-client.client-id=quarkus-service
+quarkus.oidc-client.credentials.secret=6181767e-7229-4f7b-b67f-d0a2f492eadaL
 
