--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
       <version>2.28.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-oidc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-oidc-client-filter</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
