--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,14 +28,14 @@ quarkus.http.access-log.enabled=true
 quarkus.http.access-log.pattern=long
 
 
-# OIDC Configuration
+## OIDC Configuration
 quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/quarkus
 quarkus.oidc.client-id=backend-service
 
 
 # OIDC Client
-oidc-client/mp-rest/url= http://localhost:8180/auth/realms/quarkus/
 quarkus.oidc-client.auth-server-url=http://localhost:8180/auth/realms/quarkus/
-quarkus.oidc-client.client-id=quarkus-service
-quarkus.oidc-client.credentials.secret=6181767e-7229-4f7b-b67f-d0a2f492eadaL
+quarkus.oidc-client.client-id=quarkus-oidc-client
+quarkus.oidc-client.credentials.secret=b6e981e5-0daf-4091-b06e-f0a53909fd3d
+
 
